--- a/botframework-webchat-control/src/components/ChatButton/ChatButton.css
+++ b/botframework-webchat-control/src/components/ChatButton/ChatButton.css
@@ -9,6 +9,12 @@
     margin: 0 20px 20px 0;
 }
 
+.chat-button.left {
+    left: 0;
+    right: auto;
+    margin: 0 20px 20px 20px;
+}
+
 .chat-button:hover {
     box-shadow: 0 0 20px 2px rgb(22, 27, 34);
     transition: all 2s;
