--- a/botframework-webchat-control/src/components/WebChat/WebChat.css
+++ b/botframework-webchat-control/src/components/WebChat/WebChat.css
@@ -15,6 +15,12 @@
     box-shadow: 0 0 15px 2px rgb(22, 27, 34, 0.3);
 }
 
+.chat-container.left {
+    right: auto;
+    left: 0;
+    margin: 0 20px 60px 20px;
+}
+
 .chat-container.noSendBox .webchat__basic-transcript {
     max-height: 519px;
 }
